minor style fix to make sidebar bigger on smaller screens, added another advanced array exercise

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
   height: 100%;
 }
 .left-sidebar {
-  width:20%;
+  width:30%;
   overflow: auto;
   max-width: 250px;
   background-color: #6EC900;
